@@ -188,9 +188,9 @@ class CListView extends CBaseListView
 		$id=$this->getId();
 
 		if($this->ajaxUpdate===false)
-			$ajaxUpdate=array();
-		else
-			$ajaxUpdate=array_unique(preg_split('/\s*,\s*/',$this->ajaxUpdate.','.$id,-1,PREG_SPLIT_NO_EMPTY));
+			return;
+
+		$ajaxUpdate=array_unique(preg_split('/\s*,\s*/',$this->ajaxUpdate.','.$id,-1,PREG_SPLIT_NO_EMPTY));
 		$options=array(
 			'ajaxUpdate'=>$ajaxUpdate,
 			'ajaxVar'=>$this->ajaxVar,
